# slack-logging-handler

./: pyproject.toml
slack_logging_handler/: __init__.py  handler.py
