[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-logging-handler"
version = "0.1"
authors = [{name = "Matt Pryor", email = "matt.pryor@stfc.ac.uk"}]
description = "Python logging handler that posts to a Slack channel using a webhook"
keywords = ["logging", "slack"]
readme = "README.md"
classifiers = ["Programming Language :: Python"]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/cedadev/slack-logging-handler"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
